[gd_scene load_steps=7 format=2]

[ext_resource path="res://ArtWork/Sprites/dasdsaSdsda.png" type="Texture" id=1]
[ext_resource path="res://TNT.gd" type="Script" id=2]
[ext_resource path="res://ArtWork/5x7_practical.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/explosion-5981.mp3" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[node name="Area2D" type="Area2D"]
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -16 )
shape = SubResource( 1 )

[node name="DasdsaSdsda" type="Sprite" parent="."]
position = Vector2( 0, -8 )
texture = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = -21.0
margin_top = -28.0
margin_right = 38.0
margin_bottom = 12.0
custom_fonts/normal_font = SubResource( 2 )
text = "EXPLODE?"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 20.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Area2D_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
